feat: Upgrade to Spring Boot 3.5.14 (#142)
* feat: Spring Boot upgrade to 3.3.13: initial changes of dependencies and source files. Bump atp libraries versions to ones already upgraded to Spring Boot 3.3.13. Bump dependencies: undertow to 2.3.21.Final, kotlin to 1.9.25, jackson to 2.18.6. Jakarta.jms:jakarta.jms-api:3.1.0 is added instead of javax.jms:jms-api, springfox dependencies are removed, org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16 is added instead.

* fix: IllegalClassException is replaced to IllegalArgumentException. Also: Some code check warns are fixed.

* fix(deps): Bump dependencies: activemq to 6.1.6, xnio to 3.8.16.Final, aspectj to 1.9.24, camel to 4.14.5, cxf to 4.1.4. Remove/replace relocated dependencies camel-http4 and camel-netty4.

* build: Plugin management is fixed for maven-compiler-plugin.

* build: openapi-generator-maven-plugin: version is changed to 7.9.0, configuration is upgraded for Spring Boot 3.3.13 and optimized.

* fix: BigInteger vs. Serializable types mismatch is fixed while using UniqueIdGenerator.generate().

* fix: EventTriggerSwitcherFactoryTest, EventTriggerSwitcherTest: incomplete migration from Junit4 to Junit5 is completed.

* fix: Pact-tests (consumer side) are fixed. Bump au.com.dius.pact.provider and au.com.dius.pact.consumer dependencies to 4.6.15.

* fix: Some tests are migrated from Junit4 to Junit5 and fixed.

* feat: Usages of keycloak are replaced to Jwt. Keycloak dependency is removed.

* fix: CommonsMultipartResolver bean is replaced with MultipartResolver. application.properties: spring.servlet.multipart config properties are changed.

* fix: Obsolete AbstractWebSocketMessageBrokerConfigurer is replaced to WebSocketMessageBrokerConfigurer.

* fix: Javers usages are migrated from 6.x to 7.9.0.

* feat: Camel migration to 4.14.5, Cxf migration to 4.1.4: Http, Rest,Soap, Jms, Cli, Ss7 modules are migrated.

* fix: Pact tests (consumer side) are fixed: custom OffsetDateTimeAdapter implemented and reg