@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -26,7 +26,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.qubership.atp.integration.configuration.configuration.AuditAction;
@@ -50,9 +49,11 @@ import org.qubership.automation.itf.ui.swagger.SwaggerConstants;
 import org.qubership.automation.itf.ui.util.EventTriggerHelper;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -78,13 +79,13 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
         List<EventTriggerBriefInfo> triggersToReactivate = new ArrayList<>();
         if (uiEventTriggers != null) {
             List<String> uiEventTriggersIds = uiEventTriggers.stream().map(UIEventTrigger::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             //first - delete all missed triggers under parent
             Collection<EventTriggerBriefInfo> triggersToDelete = parent.getAllEventTriggers().stream()
                     .filter(eventTrigger -> !uiEventTriggersIds.contains(String.valueOf(eventTrigger.getID())))
                     .map(eventTrigger ->
                             new EventTriggerBriefInfo((BigInteger) eventTrigger.getID(), eventTrigger.getType()))
-                    .collect(Collectors.toList());
+                    .toList();
             triggersToDeactivate.addAll(triggersToDelete);
             //second - add triggers which have no ids in request
             Collection<UIEventTrigger> triggersToAdd = Collections2.filter(uiEventTriggers,
@@ -92,8 +93,8 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
             for (UIEventTrigger uiEventTrigger : triggersToAdd) {
                 EventTrigger trigger = EventTriggerHelper.create((Storable) parent, uiEventTrigger.getType());
                 uiEventTrigger.fillTrigger(trigger);
-                if (trigger instanceof OperationEventTrigger) {
-                    parent.getOperationEventTriggers().add((OperationEventTrigger) trigger);
+                if (trigger instanceof OperationEventTrigger eventTrigger) {
+                    parent.getOperationEventTriggers().add(eventTrigger);
                 } else {
                     parent.getSituationEventTriggers().add((SituationEventTrigger) trigger);
                 }
@@ -120,7 +121,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'READ')")
-    @RequestMapping(value = "/trigger", method = RequestMethod.GET)
+    @GetMapping("/trigger")
     @Operation(summary = "GetTrigger", description = "Retrieve trigger by id", tags =
             {SwaggerConstants.TRIGGER_QUERY_API})
     @AuditAction(auditAction = "Get Event Trigger by id {{#id}} in the project {{#projectUuid}}")
@@ -137,7 +138,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'READ')")
-    @RequestMapping(value = "/trigger/state", method = RequestMethod.GET)
+    @GetMapping("/trigger/state")
     @Operation(summary = "GetTriggerState",
             description = "Retrieve trigger status by id",
             tags = {SwaggerConstants.TRIGGER_QUERY_API})
@@ -155,7 +156,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'READ')")
-    @RequestMapping(value = "/trigger/types", method = RequestMethod.GET)
+    @GetMapping("/trigger/types")
     @Operation(summary = "GetTriggerTypes",
             description = "Retrieve trigger types",
             tags = {SwaggerConstants.TRIGGER_QUERY_API})
@@ -169,7 +170,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'CREATE')")
-    @RequestMapping(value = "/trigger", method = RequestMethod.POST)
+    @PostMapping("/trigger")
     @Operation(summary = "CreateTrigger",
             description = "Create trigger by specified situation ID",
             tags = {SwaggerConstants.TRIGGER_COMMAND_API})
@@ -190,7 +191,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'UPDATE')")
-    @RequestMapping(value = "/trigger", method = RequestMethod.PUT)
+    @PutMapping("/trigger")
     @Operation(summary = "UpdateTrigger",
             description = "Update trigger by EditRequest",
             tags = {SwaggerConstants.TRIGGER_COMMAND_API})
@@ -209,7 +210,7 @@ public class EventTriggerController extends AbstractController<UIEventTrigger, E
     @PreAuthorize("@entityAccess.checkAccess("
             + "T(org.qubership.automation.itf.ui.util.UserManagementEntities).TRIGGER.getName(),"
             + "#projectUuid, 'DELETE')")
-    @RequestMapping(value = "/trigger", method = RequestMethod.DELETE)
+    @DeleteMapping("/trigger")
     @Operation(summary = "DeleteTriggers",
             description = "Delete triggers by id. Currently disabled.",
             tags = {SwaggerConstants.TRIGGER_QUERY_API})
