@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -27,12 +27,8 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 
-import javax.jms.JMSException;
-import javax.jms.TextMessage;
-
 import org.apache.activemq.command.ActiveMQTextMessage;
 import org.apache.commons.lang3.BooleanUtils;
-import org.javers.common.collections.Sets;
 import org.qubership.atp.integration.configuration.annotation.AtpJaegerLog;
 import org.qubership.atp.integration.configuration.annotation.AtpSpanTag;
 import org.qubership.atp.integration.configuration.mdc.MdcUtils;
@@ -59,7 +55,6 @@ import org.qubership.automation.itf.executor.service.ExecutorToMessageBrokerSend
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
@@ -72,6 +67,8 @@ import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.fasterxml.jackson.databind.ser.PropertyWriter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
+import jakarta.jms.JMSException;
+import jakarta.jms.TextMessage;
 
 @Component
 public class ReportWorker {
@@ -104,7 +101,6 @@ public class ReportWorker {
     private final ExecutorToMessageBrokerSender executorToMessageBrokerSender;
     private final MetricsAggregateService metricsAggregateService;
 
-    @Autowired
     public ReportWorker(ExecutorToMessageBrokerSender executorToMessageBrokerSender,
                         MetricsAggregateService metricsAggregateService) {
         this.executorToMessageBrokerSender = executorToMessageBrokerSender;
@@ -112,10 +108,10 @@ public class ReportWorker {
     }
 
     private static String objectDescription(Storable object) {
-        if (object instanceof AbstractInstance) {
+        if (object instanceof AbstractInstance instance) {
             return object.getClass().getSimpleName() + " id=" + object.getID()
                     + ", name '" + object.getName() + "'"
-                    + " of " + objectDescription(((AbstractInstance) object).getContext().getTC());
+                    + " of " + objectDescription(instance.getContext().getTC());
         } else {
             return object.getClass().getSimpleName() + " id=" + object.getID()
                     + ", name '" + object.getName() + "'";
@@ -183,7 +179,7 @@ public class ReportWorker {
     }
 
     private static SimpleBeanPropertyFilter reportWorkerFilterMessage() {
-        Set<String> properties = Sets.asSet("name", "parent", "prefix", "description", "file",
+        Set<String> properties = Set.of("name", "parent", "prefix", "description", "file",
                 "transportProperties", "failedMessage", "version", "storableProp", "extendsParameters",
                 "extensionsJson");
 
@@ -206,7 +202,7 @@ public class ReportWorker {
     }
 
     private static SimpleBeanPropertyFilter reportWorkerFilterTcContext() {
-        Set<String> properties = Sets.asSet("version", "history", "collectHistory", "prefix", "description",
+        Set<String> properties = Set.of("version", "history", "collectHistory", "prefix", "description",
                 "empty", "lastAccess", "needToReportToAtp", "validationFailed", "extendsParameters",
                 "natural_id", "runStepByStep", "running", "finished", "runnable", "parent", "partNum");
 
@@ -229,7 +225,7 @@ public class ReportWorker {
     }
 
     private static SimpleBeanPropertyFilter reportWorkerFilterSpContext() {
-        Set<String> properties = Sets.asSet("version", "history", "collectHistory", "prefix", "description",
+        Set<String> properties = Set.of("version", "history", "collectHistory", "prefix", "description",
                 "empty", "extendsParameters");
 
         return new SimpleBeanPropertyFilter.SerializeExceptFilter(properties) {
@@ -273,7 +269,7 @@ public class ReportWorker {
                                                JsonGenerator jgen,
                                                boolean writeOriginal) throws IOException {
         if (originalStringLength > maxSize) {
-            String newString = String.format(messageTemplate, objectTypeName, originalStringLength);
+            String newString = messageTemplate.formatted(objectTypeName, originalStringLength);
             jgen.writeStringField(fieldName, newString);
             return true;
         } else if (writeOriginal) {
@@ -324,7 +320,7 @@ public class ReportWorker {
                     tenantId, partNum));
             LOGGER.debug("Message is sent: id - {}, type - {}", id, type);
         } catch (JMSException e) {
-            throw new Throwable(String.format("Error while sending message: id - %s, type - %s", id, type), e);
+            throw new Throwable("Error while sending message: id - %s, type - %s".formatted(id, type), e);
         }
     }
 
@@ -333,8 +329,8 @@ public class ReportWorker {
                                   BigInteger projectId,
                                   ObjectMapper mapper,
                                   String tenantId) throws Throwable {
-        if (object instanceof CallChainInstance) {
-            TcContext tc = ((CallChainInstance) object).getContext().getTC();
+        if (object instanceof CallChainInstance instance) {
+            TcContext tc = instance.getContext().getTC();
             if (tc != null && tc.getInitiator() == object) {
                 LOGGER.debug("CallChainInstance {} is Initiator of TcContext {}, sending is skipped",
                         object.getID(), tc.getID());
@@ -346,8 +342,7 @@ public class ReportWorker {
         String jsonString = mapper.writeValueAsString(object);
         String type;
         int partNum;
-        if (object instanceof TcContext && ((TcContext) object).getInitiator() != null) {
-            TcContext tcContext = (TcContext) object;
+        if (object instanceof TcContext tcContext && tcContext.getInitiator() != null) {
             AbstractContainerInstance initiator = tcContext.getInitiator();
             if (initiator.getName() == null) {
                 /*
@@ -365,8 +360,7 @@ public class ReportWorker {
             }
             partNum = tcContext.getPartNum();
             collectContextSizeMetric(tcContext, initiator, jsonString.length());
-        } else if (object instanceof SituationInstance) {
-            SituationInstance situationInstance = (SituationInstance) object;
+        } else if (object instanceof SituationInstance situationInstance) {
             String logMessage =
                     "Report SituationInstance: [" + situationInstance.getID() + "] " + situationInstance.getName();
             jsonString = "{\"SituationInstance\":"
@@ -397,8 +391,8 @@ public class ReportWorker {
         } else {
             type = object.getClass().getSimpleName();
             LOGGER.debug("Message of type {} is sent", type);
-            if (object instanceof AbstractInstance) {
-                partNum = ((AbstractInstance) object).getContext().tc().getPartNum();
+            if (object instanceof AbstractInstance instance) {
+                partNum = instance.getContext().tc().getPartNum();
             } else {
                 partNum = 1;
                 LOGGER.warn("Object type {}: Cannot determine partNum; 1 is set", type);
@@ -459,7 +453,7 @@ public class ReportWorker {
 
     private void setIdIfNull(Storable object) {
         if (object != null && object.getID() == null) {
-            object.setID(UniqueIdGenerator.generateReportingId());
+            object.setID((BigInteger)UniqueIdGenerator.generateReportingId());
         }
     }
 
