@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -42,7 +42,6 @@ import lombok.extern.slf4j.Slf4j;
 public class ProjectSettingsService extends AbstractProjectSettingsService {
 
     private final HazelcastInstance hazelcastClient;
-    private final CoreObjectManager coreObjectManager;
 
     @Value("${hazelcast.project-settings.cache.refill.time.seconds}")
     private long projectSettingsCacheRefillTime;
@@ -231,7 +230,7 @@ public class ProjectSettingsService extends AbstractProjectSettingsService {
             set(projectId.toString(), shortName, value);
         } catch (Exception e) {
             throw new RuntimeException(
-                    String.format("Error while upsert project setting property to cache: '%s' for project %s",
+                    "Error while upsert project setting property to cache: '%s' for project %s".formatted(
                             shortName, projectId), e);
         }
     }
@@ -252,7 +251,7 @@ public class ProjectSettingsService extends AbstractProjectSettingsService {
 
     private void updateDataBase(BigInteger projectId, String shortName, String value) {
         //noinspection unchecked
-        coreObjectManager.getSpecialManager(StubProject.class, SearchManager.class)
+        CoreObjectManager.getInstance().getSpecialManager(StubProject.class, SearchManager.class)
                 .updateProjectSetting(projectId, shortName, value);
     }
 
@@ -266,7 +265,8 @@ public class ProjectSettingsService extends AbstractProjectSettingsService {
     private Map<String, String> getAllFromDataBase(BigInteger projectId) {
         try {
             //noinspection unchecked
-            return (Map<String, String>) coreObjectManager.getSpecialManager(StubProject.class, SearchManager.class)
+            return (Map<String, String>) CoreObjectManager.getInstance()
+                    .getSpecialManager(StubProject.class, SearchManager.class)
                     .getAllProjectSettingsByProjectId(projectId);
         } catch (Exception e) {
             throw new RuntimeException("Error getting project settings from db for projectId " + projectId, e);
